build: fix spotless on JDK25 and normalize java formatting